k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emea8-squad2-telp
  annotations:
    app.openshift.io/vcs-uri: https://github.com/cloud-native-garage-method-cohort/emea8-squad2-TELP
    app.openshift.io/vcs-ref: 2b32361dcb56d548a156d8fdddffe9981be76617
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: app-instance
      app.kubernetes.io/name: app
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: app-instance
        app.kubernetes.io/name: app
    spec:
      containers:
        - name: emea8-squad2-telp
          image: quay.io/pbworker/telp-app:2b32361dcb56d548a156d8fdddffe9981be76617
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 5000
